# Olaf_Onboarding

./: README.md  get_started.sh  ououtput.txt
src/: CMakeLists.txt
src/hole_tracker/: CMakeLists.txt
src/hole_tracker/include/: HoleTrackerDecision.h  HoleTrackerNode.h  LidarObstacleManager.h  LinearAlgebra.h  RvizUtils.h
src/hole_tracker/launch/: hole_tracker.launch
src/hole_tracker/src/: HoleTrackerDecision.cpp  HoleTrackerNode.cpp  LidarObstacleManager.cpp  LinearAlgebra.cpp  hole_tracker_node.cpp
src/hole_tracker/test/: lidar-decision-test.cpp
src/lidar_decision/: CMakeLists.txt  package.xml
src/lidar_decision/include/: LidarDecision.h  LidarNode.h  LidarObstacleManager.h  LinearAlgebra.h  RvizUtils.h
src/lidar_decision/launch/: hole_tracker.launch
src/lidar_decision/src/: HoleTrackerNode.cpp  LidarDecision.cpp  LidarNode.cpp  LidarObstacleManager.cpp  LinearAlgebra.cpp  RvizUtils.cpp  lidar_node.cpp
src/lidar_decision/test/: lidar-decision-test.cpp  lidar-obstacle-manager-test.cpp  linear-algebra-test.cpp
src/obstacle_avoidance/: .CMakeLists.txt.un~  .TODO.un~  .package.xml.un~  CMakeLists.txt  TODO  package.xml  package.xml~
src/obstacle_avoidance/include/: .GoThroughHole.h.swp  .GoThroughHole.h.un~  Arithmetics.h  ConeAvoider.h  DensityBasedClustering.h  GoThroughHole.h  GoThroughHole.h~  MyNode.h  OANode.h  ObstacleAvoidance.h  ObstacleAvoider.h  ObstacleAvoiderNode.h  OlafNode.h
src/obstacle_avoidance/launch/: cone_avoider.launch  my_node.launch  obstacle_avoidance.launch  obstacle_avoider_node.launch  olaf_node.launch
src/obstacle_avoidance/src/: .GoThroughHole.cpp.swp  .GoThroughHole.cpp.un~  .go_through_hole.cpp.swp  .go_through_hole.cpp.un~  .locate_hole.cpp.un~  Arithmetics.cpp  ConeAvoider.cpp  DensityBasedClustering.cpp  GoThroughHole.cpp  GoThroughHole.cpp~  MyNode-devel.cpp  MyNode.cpp  OANode.cpp  ObstacleAvoidance.cpp  ObstacleAvoidanceNode.cpp  ObstacleAvoider.cpp  ObstacleAvoiderNode.cpp  OlafNode.cpp  cone_avoider.cpp  go_through_hole.cpp  go_through_hole.cpp~  locate_hole.cpp  my_node.cpp  obstacle_avoidance.cpp  obstacle_avoider_node.cpp  olaf_node.cpp
src/obstacle_avoidance/test/: arithmetics-test.cpp  cone_avoider_rostest.cpp  density-based-clustering-test.cpp  go-through-hole-test.cpp  go_through_hole_rostest.cpp  go_through_hole_rostest.cpp.old  my-node-test.cpp  my_node_rostest.cpp  obstacle-avoider-node-test.cpp  obstacle_avoidance-test.cpp  obstacle_avoidance_rostest.cpp  obstacle_avoidance_test.test  obstacle_avoider_rostest.cpp  obstacle_avoider_rostest.test  olaf-node-test.cpp  olaf_node_rostest.cpp  sample_package_test.test
src/sample_package/: CMakeLists.txt  package.xml
src/sample_package/src/: .MyNode.cpp.swp  MyNode.cpp  my_node.cpp
src/sample_package/test/: my-node-test.cpp  my_node_rostest.cpp
test_files/: 2017-10-07-14-24-15.bag  test.cpp
